# FullTrailer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cursor-rules.md  package-lock.json  package.json
Rafagas del Golfo/: LEEME.txt  index.html
Rafagas del Golfo/fuente/: Flota Rafagas del Golfo.dc.html  TruckDiagram.dc.html
Typescript/: package-lock.json
app/: check.cjs  index.html  package-lock.json  package.json  vite.config.ts
app/src/: app.ts  main.tsx  runtime.tsx
app/src/components/: ThemeLauncher.tsx
app/src/data/: dollies.ts  facturas.ts  fleetCatalog.ts  operadores.ts  remolques.ts  samsaraFuel.ts  tractos.ts  uploads.ts
app/src/views/: Dollies.tsx  Facturas.tsx  Home.tsx  Operadores.tsx  Remolques.tsx  Tractos.tsx  UnitsConfig.tsx
docs/: architecture.md  samsara-events.md  setup.md
json/: actividades.json  dolly.json  insumos.json  operador.json  remolque.json  soliordencompra.json  tracto.json  vehicles.json  vehiculos.json
memory/: alerts-history.md  events-log.md
migrations/: 001_initial.sql
server/: .env.example  index.js  package-lock.json  package.json
src/: config.rs  error.rs  lib.rs  main.rs
src/agents/: absence_detector.rs  mod.rs  trip_monitor.rs
src/dashboard/: mod.rs
src/integrations/: ai.rs  mod.rs  samsara_api.rs  whatsapp.rs
src/memory/: markdown_store.rs  mod.rs  sqlite_store.rs
src/scheduler/: mod.rs
src/webhooks/: mod.rs  samsara.rs  signature.rs
templates/: dashboard.html
tests/: webhook_signature_test.rs
