[package]
name = "fulltrailer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tokio-cron-scheduler = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
